update content packet

--- a/index.html
+++ b/index.html
@@ -83,14 +83,17 @@
             <div class="benefit text-center p-3">
               <img src="assets/img/6599590_course_e-learning_education_evaluation_exam_icon.png" alt="metode-belajar" height="100vh" class="pb-2" />
               <h5>Metode Belajar Lebih Singkat</h5>
-              <p class="benefit-content">Metode belajarnya lebih singkat dibandingkan sekolah formal seperti Sekolah Kejuruan Multimedia/DKV yang butuh waktu belajar 3 tahun atau pelatihan kursus yang butuh waktu 6-8 bulan.</p>
+              <p class="benefit-content">
+                Metode belajarnya yang relatif lebih singkat dibanding dengan sekolah formal pada umumnya seperti Sekolah Menengah Kejuruan Multimedia/DKV yang membutuhkan waktu belajar 3 tahun atau pelatihan kursus yang butuh waktu 6-8
+                bulan.
+              </p>
             </div>
           </div>
           <div class="col-md-3 mb-2">
             <div class="benefit text-center p-3">
               <img src="assets/img/6599585_course_e-learning_education_learning_teacher_icon.png" alt="mentor-berpengalaman" height="100vh" class="pb-2" />
               <h5>Mentor Berpengalaman dan Ramah</h5>
-              <p class="benefit-content">Mentor yang berpengalaman, serta pelayanan yang ramah dari para mentor disetiap pertemuan.</p>
+              <p class="benefit-content">Mentor yang sangat berpengalaman, serta pelayanan yang ramah dari para mentor disetiap pertemuannya.</p>
             </div>
           </div>
           <div class="col-md-3 mb-2">
