update content benefit

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="benefit text-center p-3">
               <img src="assets/img/6599585_course_e-learning_education_learning_teacher_icon.png" alt="mentor-berpengalaman" height="100vh" class="pb-2" />
               <h5>Mentor Berpengalaman dan Ramah</h5>
-              <p class="benefit-content">Mentor yang sangat berpengalaman, serta pelayanan yang ramah dari para mentor disetiap pertemuannya.</p>
+              <p class="benefit-content">Mentor yang sudah sangat berpengalaman dalam bidangnya, serta pelayanan yang ramah dari para mentor disetiap pertemuannya.</p>
             </div>
           </div>
           <div class="col-md-3 mb-2">
