update img ms office class

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
     <!-- JQuery script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Document</title>
+    <title>Creative Ins. | About</title>
   </head>
   <body>
     <header>
