--- a/about.html
+++ b/about.html
@@ -53,21 +53,40 @@
     <main>
       <div class="container mt-5 pt-5">
         <div class="logoContent text-center pb-3">
-          <img src="assets/img/logocreativeins3_transparant.png" alt="creative-ins-logo" class="imgAbout" width="30%" />
+          <img src="assets/img/logocreativeins3_transparant.png" alt="creative-ins-logo" class="imgAbout pb-3" width="30%" />
         </div>
         <div class="contentProfil pb-3">
           <p>
-            Creative Ins merupakan sebuah Tempat Kursus yang dilakukan secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office).<br /><br>
+            Creative Ins merupakan sebuah Tempat Kursus yang dilakukan secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office).<br /><br />
             <strong>Tujuan didirikan agar mencetak lulusan yang :</strong>
-            <ol>
+            <!-- <ol>
               <li>memiliki keahlian Desain Grafis/Editor Video/Copywriter/Administrasi Perkantoran</li>
               <li>memiliki kreatifitas dan kualitas</li>
               <li>mampu memanfaatkan teknologi untuk berkembang</li>
               <li>alumninya bisa berpenghasilan sendiri sebagai freelancer atau buka jasa sesuai keahliannya.</li>
-            </ol>
+            </ol> -->
           </p>
+          <div class="row text-center">
+            <div class="col-md-3">
+              <img src="assets/img/4172954_computer_creative_keyboard_paper_process_icon.png" alt="soft-skills" height="100vh" />
+              <p>memiliki keahlian Desain Grafis/Editor Video/Copywriter/Administrasi Perkantoran</p>
+            </div>
+            <div class="col-md-3">
+              <img src="assets/img/3533409_creativity_idea_imagination_innovation_innovative_icon.png" alt="creativity" height="100vh" />
+              <p>memiliki kreatifitas dan kualitas</p>
+            </div>
+            <div class="col-md-3">
+              <img src="assets/img/4079577_development_ladder_person_personal_steps_icon.png" alt="development" height="100vh" />
+              <p>mampu memanfaatkan teknologi untuk berkembang</p>
+            </div>
+            <div class="col-md-3">
+              <img src="assets/img/6071768_freelance_freelancer_job_occupation_worker_icon.png" alt="freelance" height="100vh" />
+              <p>alumninya bisa berpenghasilan sendiri sebagai freelancer atau buka jasa sesuai keahliannya.</p>
+            </div>
+          </div>
           <p>
-            Creative Ins didirikan oleh Anjani Abbas sebagai Founder Creative Ins dan Nur Aisyah sebagai Co-Founder Creative Ins yang pernah mengenyam pendidikan di Teknologi Informasi UNTAD Palu dan berjuang bersama tim militan yang siap tempur dari medan perang masing-masing, Farachatus Salwa dari Bali, Princessa Arima dari Malang, Octavia dari Bengkulu, serta UnName dari Palu. <br>
+            Creative Ins didirikan oleh Anjani Abbas sebagai Founder Creative Ins dan Nur Aisyah sebagai Co-Founder Creative Ins yang pernah mengenyam pendidikan di Teknologi Informasi UNTAD Palu dan berjuang bersama tim militan yang siap
+            tempur dari medan perang masing-masing, Farachatus Salwa dari Bali, Princessa Arima dari Malang, Octavia dari Bengkulu, serta UnName dari Palu. <br />
           </p>
           <div class="quote text-center fw-bold py-4 my-3">
             <p>" Yang terpenting bukanlah siapanya atau privillage-nya, yang terpenting adalah kebersamaan buat perubahan lewat keahlian " <br />- Tim Creative Ins -</p>
