--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <!-- Jumbotron  -->
       <div class="jumbotron">
         <img src="assets/img/bench-accounting-C3V88BOoRoM-unsplash.jpg" alt="talk" class="banner" />
-        <div class="mask d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.5); height: 500px; width: 100%">
+        <div class="mask d-flex justify-content-center align-items-center">
           <div class="content text-center text-white">
             <img src="assets/img/20210822_133345.png" alt="logo" height="200vh" />
-            <p>Merupakan Platform Penyedia Layanan E-Course</p>
+            <p>Platform Penyedia E-Course Skill</p>
           </div>
         </div>
       </div>
