update capital and about contact

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="index.html">Webinar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#custService">Contact</a>
               </li>
             </ul>
           </div>
@@ -59,29 +59,23 @@
           <p>
             Creative Ins merupakan sebuah Tempat Kursus yang dilakukan secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office).<br /><br />
             <strong>Tujuan didirikan agar mencetak lulusan yang :</strong>
-            <!-- <ol>
-              <li>memiliki keahlian Desain Grafis/Editor Video/Copywriter/Administrasi Perkantoran</li>
-              <li>memiliki kreatifitas dan kualitas</li>
-              <li>mampu memanfaatkan teknologi untuk berkembang</li>
-              <li>alumninya bisa berpenghasilan sendiri sebagai freelancer atau buka jasa sesuai keahliannya.</li>
-            </ol> -->
           </p>
           <div class="row text-center">
             <div class="col-md-3">
               <img src="assets/img/4172954_computer_creative_keyboard_paper_process_icon.png" alt="soft-skills" height="100vh" />
-              <p>memiliki keahlian Desain Grafis/Editor Video/Copywriter/Administrasi Perkantoran</p>
+              <p>Memiliki keahlian Desain Grafis/Editor Video/Copywriter/Administrasi Perkantoran</p>
             </div>
             <div class="col-md-3">
               <img src="assets/img/3533409_creativity_idea_imagination_innovation_innovative_icon.png" alt="creativity" height="100vh" />
-              <p>memiliki kreatifitas dan kualitas</p>
+              <p>Memiliki kreatifitas dan kualitas</p>
             </div>
             <div class="col-md-3">
               <img src="assets/img/4079577_development_ladder_person_personal_steps_icon.png" alt="development" height="100vh" />
-              <p>mampu memanfaatkan teknologi untuk berkembang</p>
+              <p>Mampu memanfaatkan teknologi untuk berkembang</p>
             </div>
             <div class="col-md-3">
               <img src="assets/img/6071768_freelance_freelancer_job_occupation_worker_icon.png" alt="freelance" height="100vh" />
-              <p>alumninya bisa berpenghasilan sendiri sebagai freelancer atau buka jasa sesuai keahliannya.</p>
+              <p>Alumninya bisa berpenghasilan sendiri sebagai freelancer atau buka jasa sesuai keahliannya.</p>
             </div>
           </div>
           <p>
