--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="#packet">E-Course</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#event">Webinar</a>
+                <a class="nav-link" href="#webinar">Webinar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#custService">Contact</a>
@@ -116,9 +116,9 @@
     <!-- end Penjelasan Benefit -->
 
     <!-- Event -->
-    <section class="py-5" id="event">
+    <section class="event py-5">
       <div class="container text-center">
-        <h1 class="fw-bold">Create Your Skill</h1>
+        <h1 class="fw-bold" id="webinar">Create Your Skill</h1>
         <h4 class="pt-3 pb-5">
           Mau menambah pengetahuanmu seputar skill masa kini?<br />
           Bisa jadi akan terjawab, disini.
