--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="index.html#packet">E-Course</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#event">Webinar</a>
+                <a class="nav-link" href="index.html#webinar">Webinar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#custService">Contact</a>
