menambahkan htaccess dan menghapus ekstensi html

--- a/about.html
+++ b/about.html
@@ -29,16 +29,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html">About</a>
+                <a class="nav-link active" href="about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#packet">E-Course</a>
+                <a class="nav-link" href="index#packet">E-Course</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#webinar">Webinar</a>
+                <a class="nav-link" href="index#webinar">Webinar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#custService">Contact</a>
