--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Primary Meta Tags -->
+    <title>Creative Ins - Create your skill</title>
+    <meta name="title" content="Creative Ins - Create your skill" />
+    <meta name="description" content="Creative Ins merupakan sebuah Tempat Kursus yang dilakukan secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office)." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Creative Ins - Create your skill" />
+    <meta property="og:description" content="Creative Ins merupakan sebuah Tempat Kursus yang dilakukan secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office)." />
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Creative Ins - Create your skill" />
+    <meta property="twitter:description" content="Creative Ins merupakan sebuah Tempat Kursus yang dilakukan secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office)." />
+    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png" />
+    <!-- end Required meta tags -->
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
