--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://www.creativeinsskill.com/" />
     <meta property="og:title" content="Creative Ins - Create your skill" />
     <meta property="og:description" content="Creative Ins merupakan sebuah Tempat Kursus yang dilakukan secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office)." />
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png" />
+    <meta property="og:image" content="https://www.creativeinsskill.com/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="https://www.creativeinsskill.com/" />
     <meta property="twitter:title" content="Creative Ins - Create your skill" />
     <meta property="twitter:description" content="Creative Ins merupakan sebuah Tempat Kursus yang dilakukan secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office)." />
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png" />
+    <meta property="twitter:image" content="https://www.creativeinsskill.com/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png" />
     <!-- end Required meta tags -->
 
     <!-- Bootstrap CSS -->
